[gd_scene load_steps=20 format=2]

[ext_resource path="res://Art/square_textures/0/box_blue.png" type="Texture" id=1]
[ext_resource path="res://Art/square_textures/0/box_red.png" type="Texture" id=2]
[ext_resource path="res://Art/square_textures/0/box_orange.png" type="Texture" id=3]
[ext_resource path="res://Art/square_textures/0/box_yellow.png" type="Texture" id=4]
[ext_resource path="res://Scripts/ProductButton.gd" type="Script" id=5]
[ext_resource path="res://Art/random_box.png" type="Texture" id=6]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Fonts/Bumpo.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Art/coinIcon.png" type="Texture" id=10]
[ext_resource path="res://Art/tickicon.png" type="Texture" id=11]
[ext_resource path="res://Styles/Buttons/ProductButton/ProductButton_normal.tres" type="StyleBox" id=12]
[ext_resource path="res://Styles/Buttons/ProductButton/ProductButton_pressed.tres" type="StyleBox" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.14902, 0.564706, 0.254902, 0 )
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0.0392157, 0.521569, 0.160784, 1 )
use_filter = true
extra_spacing_top = 6
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 1
use_filter = true
extra_spacing_top = 6
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ProductButton" type="Button"]
margin_right = 170.0
margin_bottom = 180.0
rect_min_size = Vector2( 170, 180 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 12 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 170, 59 )
mouse_filter = 1
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 0.0627289
margin_top = -85.9265
margin_right = 81.0627
margin_bottom = 0.0735016
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon3" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0266
margin_top = 0.496277
margin_right = -0.0265579
margin_bottom = 86.4963
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon4" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 0.145844
margin_top = -0.0729218
margin_right = 81.1459
margin_bottom = 85.9271
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon1" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.3177
margin_top = -86.1823
margin_right = -0.317673
margin_bottom = -0.182297
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InActiveIcon" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 1.0
mouse_filter = 0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="InActiveIcon"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -32.0
margin_right = -1.99998
margin_bottom = 4.0
rect_min_size = Vector2( 169, 36 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="InActiveIcon/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="price" type="Label" parent="InActiveIcon/Button/MarginContainer"]
margin_left = 69.0
margin_right = 119.0
margin_bottom = 36.0
size_flags_horizontal = 6
size_flags_vertical = 5
custom_fonts/font = SubResource( 5 )
custom_colors/font_outline_modulate = Color( 0.0392157, 0.521569, 0.160784, 1 )
text = "300"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="icon" type="TextureRect" parent="InActiveIcon/Button/MarginContainer/price"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -13.0
margin_right = -6.0
margin_bottom = 13.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedIcon" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="SelectedIcon"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -38.9439
margin_top = 6.2245
margin_right = -5.94389
margin_bottom = 39.2245
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_ProductButton_pressed"]
[connection signal="pressed" from="InActiveIcon/Button" to="." method="_on_Button_pressed"]
